# ENGN-2912B

./: README.md
example/ex04-master/: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp
example/ex06-master/: CMakeLists.txt  README.md
example/ex06-master/src/: main.cpp
example/ex06p2-master/: CMakeLists.txt  README.md
example/ex06p2-master/lib/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp
example/ex06p2-master/src/: main.cpp
example/ex07-master/: CMakeLists.txt
example/ex07-master/inc/libPoints/: points.cpp  points.hpp
example/ex07-master/src/: main.cpp
example/ex10-master/: CMakeLists.txt  README.md
example/ex10-master/lib/: CMakeLists.txt  integrate.hpp
example/ex10-master/src/: main1.cpp  main2.cpp
example/ex11-master/: CMakeLists.txt  README.md
example/ex11-master/src/: main1.cpp  main2.cpp  main3.cpp
example/ex14-boost-master/: .gitignore  CMakeLists.txt  README.md
example/ex14-boost-master/data/: README.md
example/ex14-boost-master/src/: main.cpp
example/ex14-eigen-master/: CMakeLists.txt  README.md
example/ex14-gnuplot-master/: CMakeLists.txt  README.md
example/ex14-gnuplot-master/src/: example1.cpp  example2.cpp
example/ex19-vtkhorn-master/: .gitignore  CMakeLists.txt  fileformat.txt  flapmodel.cxx  parameter.txt  parblank.txt  parse.cxx  parse.h  partst.txt  readme.txt
example/ex19-vtkhorn-master/conf/: otc_12mm_flap01.txt  otc_12mm_noflap.txt  otc_13mm_flap_30deg_left.txt  otc_13mm_flap_tst.txt  otc_13mm_long_oblique_flap.txt  otc_13mm_long_oblique_flap_canal_right.txt  otc_13mm_noflap.txt  otc_13mm_tall_flap_30deg_left.txt
example/ex19-vtkhorn-master/mfile/flapmodeltst/: cnisectst.m  cnisectstshort.m  cnldirtst.m  cnlpostst.m  lintersectst.m
example/ex19-vtkhorn-master/mfile/result/: dir_show_all_azel_cnt.m  dir_show_all_azel_srf.m
example/ex19-vtkhorn-master/script/: clean.sh  otc_tst.sh  runsim.sh  tst.sh
example/ex19-vtkhorn-master/tsttcl/: cutcyl.tcl  planeorgtst.tcl
example/ex22-master/: .gitignore  CMakeLists.txt  README.md
example/ex22-master/ccv/: threaded_array.sh  threaded_job.sh
example/ex22-master/src/: main1.cpp  main2.cpp  main3.cpp  main4.cpp
example/ex24-master/: CMakeLists.txt
example/ex24-master/src/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
homework/hw1-FrozenRouter-master/: .travis.yml  CMakeLists.txt  README.md  mainQ1.cpp  mainQ2.cpp
homework/hw1-FrozenRouter-master/hw1Tests/: CMakeLists.txt
homework/hw1-FrozenRouter-master/hw1Tests/01_HelloTests/: CMakeLists.txt  helloTests.cpp
homework/hw1-FrozenRouter-master/hw1Tests/02_IntegerSummationTests/: CMakeLists.txt  integerSummationTests.cpp
homework/hw1-FrozenRouter-master/hw1Tests/basicTests/: CMakeLists.txt  basicCheck.cpp
homework/hw1-FrozenRouter-master/src/: CMakeLists.txt  hello.h  sumIntegers.h
homework/hw2-FrozenRouter-master/: .travis.yml  CMakeLists.txt  README.md  mainQ1.cpp  mainQ2.cpp
homework/hw2-FrozenRouter-master/hw2Tests/: CMakeLists.txt
homework/hw2-FrozenRouter-master/hw2Tests/01_NewtonRaphsonTests/: CMakeLists.txt  newtonRaphsonTests.cpp
homework/hw2-FrozenRouter-master/hw2Tests/02_FactorialTests/: CMakeLists.txt  factorialTests.cpp
homework/hw2-FrozenRouter-master/src/: CMakeLists.txt  factorial.cpp  factorial.h  newtonRaphson.cpp  newtonRaphson.h
homework/hw3-FrozenRouter-master/: .travis.yml  CMakeLists.txt  README.md  mainQ1.cpp  mainQ2.cpp  mainQ3.cpp  mainQ4.cpp  mainQ5.cpp
homework/hw3-FrozenRouter-master/hw3Tests/: CMakeLists.txt
homework/hw3-FrozenRouter-master/hw3Tests/01_ClassesTests/: CMakeLists.txt  testMatrix2x2.cpp
homework/hw3-FrozenRouter-master/hw3Tests/02_ODETests/: CMakeLists.txt  ODETests.cpp
homework/hw3-FrozenRouter-master/hw3Tests/03_TranslationTests/: CMakeLists.txt  testTranslation.cpp
homework/hw3-FrozenRouter-master/hw3Tests/04_GoldenRatioTests/: CMakeLists.txt  testGoldenRatio.cpp
homework/hw3-FrozenRouter-master/hw3Tests/05_StringTests/: CMakeLists.txt  testStrings.cpp
homework/hw3-FrozenRouter-master/src/: AbstractOdeSolver.cpp  AbstractOdeSolver.h  CMakeLists.txt  ForwardEulerSolver.cpp  ForwardEulerSolver.h  Matrix2x2.cpp  Matrix2x2.h  RungeKuttaSolver.cpp  RungeKuttaSolver.h  concat.cpp  concat.h  erase.cpp  erase.h  estimategoldenratio.cpp  estimategoldenratio.h  fibonacci.cpp  fibonacci.h  substr.cpp  substr.h  translation.cpp  translation.h
homework/hw4-FrozenRouter-master/: .travis.yml  CMakeLists.txt  README.md  mainQ1.cpp  mainQ2.cpp  mainQ3.cpp  mainQ4.cpp  noisyImage.pgm  sampleTextFile.txt
homework/hw4-FrozenRouter-master/hw4Tests/: CMakeLists.txt
homework/hw4-FrozenRouter-master/hw4Tests/01_TextFileAnalysisTests/: CMakeLists.txt  textFileAnalysisTests.cpp
homework/hw4-FrozenRouter-master/hw4Tests/02_PairsTests/: CMakeLists.txt  pairsTests.cpp
homework/hw4-FrozenRouter-master/hw4Tests/03_PiTests/: CMakeLists.txt  piTests.cpp
homework/hw4-FrozenRouter-master/src/: CMakeLists.txt  Image.cpp  Image.h  ImageDenoiser.cpp  ImageDenoiser.h  analyzeTextFile.cpp  analyzeTextFile.h  estimatePiRecurrence.cpp  estimatePiRecurrence.h  estimatePiSeries.cpp  estimatePiSeries.h  pairs.cpp  pairs.h
homework/hw5-FrozenRouter-master/: .travis.yml  CMakeLists.txt  README.md  mainQ1.cpp  mainQ2.cpp  mainQ3.cpp
homework/hw5-FrozenRouter-master/hw5Tests/: CMakeLists.txt
homework/hw5-FrozenRouter-master/src/: CMakeLists.txt  Matrix.cpp  Matrix.h  RNG.cpp  RNG.h  firFilter.cpp  firFilter.h
homework/hw6-FrozenRouter-master/: .gitignore  .travis.yml  CMakeLists.txt  README.md  downloadData.sh  dummy.data  mainQ1.cpp
homework/hw6-FrozenRouter-master/hw6Tests/: CMakeLists.txt
homework/hw6-FrozenRouter-master/src/: CMakeLists.txt  dnaFindPattern.cpp  dnaFindPattern.h
homework/hw6part2-FrozenRouter-master/: .gitignore  .travis.yml  CMakeLists.txt  README.md  mainQ2.cpp
homework/hw6part2-FrozenRouter-master/hw6Tests/: CMakeLists.txt
homework/hw6part2-FrozenRouter-master/src/: CMakeLists.txt  anc.cpp  anc.h
homework/hw6part2-FrozenRouter-master/srcMATLAB/: anc_lms.m  anc_main.m  anc_wiener.m
(+81 files in other folders)
